add fira sans font
- monospace for headings
- sans for everything else

--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -4,7 +4,7 @@ layout: skeleton.liquid
 <body class="bg-orange-100/50 dark:bg-[#270D05] min-h-full">
 
   <header class="inline">
-    <nav class="z-50 sticky top-3 bg-transparent border border-transparent mt-3 mb-6 mx-3 rounded-lg navbar">
+    <nav class="z-50 sticky top-3 bg-transparent border border-transparent mt-3 mb-6 mx-3 rounded-lg navbar font-mono">
       <div class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto p-2">
         <!-- left side of navbar - my name-->
         <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse text-2xl font-semibold dark:text-white">Siddhant Kameswar</a>
