--- a/src/projects/skills.liquid
+++ b/src/projects/skills.liquid
@@ -7,11 +7,11 @@ title: "Skills"
 description: "Programming languages and tools I've worked with"
 ---
 
-<h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl dark:text-white underline underline-offset-3 decoration-8 decoration-primary-400 dark:decoration-primary-600">Skills:</h1>
+<h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl dark:text-white underline underline-offset-3 decoration-8 decoration-primary-400 dark:decoration-primary-600 font-mono">Skills:</h1>
 
 
 <div class="max-w-screen-md flex my-2 items-center gap-3">
-  <h2 class="text-3xl font-medium text-gray-700 dark:text-gray-300 tracking-tight shrink-0">Languages</h2>
+  <h2 class="text-3xl font-medium text-gray-700 dark:text-gray-300 tracking-tight shrink-0 font-mono">Languages</h2>
   <hr class="h-px bg-gray-300 border-0 dark:bg-gray-600 grow w-full">
 </div>
 
@@ -31,7 +31,7 @@ description: "Programming languages and tools I've worked with"
 </ul>
 
 <div class="max-w-screen-md flex my-2 items-center gap-3">
-  <h2 class="text-3xl font-medium text-gray-700 dark:text-gray-300 tracking-tight shrink-0">Tools/frameworks</h2>
+  <h2 class="text-3xl font-medium text-gray-700 dark:text-gray-300 tracking-tight shrink-0 font-mono">Tools/frameworks</h2>
   <hr class="h-px bg-gray-300 border-0 dark:bg-gray-600 grow w-full">
 </div>
 {% for item in skills %}
