--- a/src/contact.liquid
+++ b/src/contact.liquid
@@ -7,7 +7,7 @@ description: "Contact me"
 ---
 
 <section class="max-w-screen-md mx-auto">
-  <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl dark:text-white underline underline-offset-3 decoration-8 decoration-primary-400 dark:decoration-primary-600">Contact me:</h1>
+  <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl dark:text-white underline underline-offset-3 decoration-8 decoration-primary-400 dark:decoration-primary-600 font-mono">Contact me:</h1>
 
   <p class="lead text-gray-900 dark:text-white mb-2">Fill out this form and I'll try to get back to you as soon as possible:</p>
   
