--- a/src/projects/index.liquid
+++ b/src/projects/index.liquid
@@ -6,7 +6,7 @@ title: Projects
 description: "An incomplete list of my projects"
 ---
 
-<h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl dark:text-white underline underline-offset-3 decoration-8 decoration-primary-400 dark:decoration-primary-600">Projects:</h1>
+<h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl dark:text-white underline underline-offset-3 decoration-8 decoration-primary-400 dark:decoration-primary-600 font-mono">Projects:</h1>
 <p class="text-gray-500 sm:text-xl dark:text-gray-400 mb-4">An incomplete list of everything I've done</p>
 
 <div class="flex items-start flex-col md:flex-row-reverse gap-3" x-data="projects">
@@ -98,7 +98,7 @@ description: "An incomplete list of my projects"
                 <img :class="`lightbox w-full h-auto rounded-lg mb-3 ${project.transparentImage ? '' : 'shadow-xl dark:shadow-gray-800 border-2 border-gray-300 dark:border-gray-500'}`" :src="project.image" alt="project screenshot" />
               </template>
               
-              <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white name" x-text="project.name"></h5>
+              <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white name font-mono" x-text="project.name"></h5>
               <p class="font-normal text-gray-700 dark:text-gray-300 mb-5 description" x-text="project.description"></p>
               
               <template x-if="project.langs">
