--- a/src/_includes/skeleton.liquid
+++ b/src/_includes/skeleton.liquid
@@ -14,7 +14,7 @@
         Siddhant Kameswar
     </title>
     <link rel="stylesheet" href="/{% cssFilename %}" />
-    <link rel="icon" href="/assets/favicon.png" />
+    <link rel="icon" href="/favicon.png" />
     <!-- because lightningcss -->
     <style>@keyframes appear{entry 0%{opacity:0}entry 75%{opacity:0}entry 100%{opacity:1}exit 75%{opacity:1}exit 100%{opacity:0}}@keyframes enter-exit{entry 0%{opacity:0;transform:translateY(50%)}entry 50%{opacity:.35;transform:translateY(25%)}entry 100%{opacity:1;transform:translateY(0)}exit 0%{opacity:1;transform:translateY(0)}exit 50%{opacity:.35;transform:translateY(-25%)}exit 100%{opacity:0;transform:translateY(-50%)}}</style>
   </head>
