rename to kameswar.com

--- a/src/sitemap.liquid
+++ b/src/sitemap.liquid
@@ -6,7 +6,7 @@ eleventyExcludeFromCollections: true
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
   {% for page in collections.all %}
   <url>
-    <loc>https://siddhant.kameswar.com{{ page.url }}</loc>
+    <loc>https://kameswar.com{{ page.url }}</loc>
     <lastmod>{{ page.date | date_to_xmlschema }}</lastmod>
   </url>
   {% endfor %}
