add min length to contact form

--- a/src/contact.liquid
+++ b/src/contact.liquid
@@ -31,7 +31,7 @@ description: "Contact me"
 
     <div class="mb-3">
       <label for="input-message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Message:</label>
-      <textarea id="input-message" name="message" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-prim focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" required rows="4"></textarea>
+      <textarea id="input-message" name="message" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-prim focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" required rows="4" minlength="10"></textarea>
     </div>
 
     <div class="cf-turnstile" data-sitekey="{{ turnstileKey }}"></div>
